# base

./: .gitignore  CHANGELOG.sf.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.sf  Justfile  README.md  deny.toml  lychee.toml  test.md
.dev/todo/: upgrade-upstream-v0-8-0.md
.github/: VOUCHED.td
.github/actions/setup/: action.yml
.github/benchmark/: load-test.yml
.github/workflows/: action-tests.yml  benchmark.yml  build-release.yml  ci.yml  claude-review.yml  docker.yml  docs-specs-ci.yml  lychee.yml  no-std.yml  sf-release.yml  stale.yml  vouch.yml  zepter.yml
actions/harness/: Cargo.toml
actions/harness/src/: action.rs  engine.rs  harness.rs  l2.rs  lib.rs  matrix.rs  miner.rs  node.rs  p2p.rs
actions/harness/tests/: batch_submission.rs  batcher_blobs.rs  batcher_channels.rs  batcher_hardfork_transitions.rs  batcher_sequencer_drift.rs  derivation.rs  ecotone_activation.rs  finalization.rs  hardfork_activation.rs  holocene_activation.rs  node_derivation.rs  operator_fees.rs  unsafe_gossip.rs
baseup/: README.md  baseup  install
crates/alloy/consensus/: Cargo.toml
crates/batcher/comp/: Cargo.toml
crates/batcher/encoder/: Cargo.toml  README.md
crates/batcher/encoder/src/: config.rs  encoder.rs  lib.rs  metrics.rs  pipeline.rs  submission.rs
crates/batcher/encoder/src/test_utils/: mod.rs
crates/batcher/service/: Cargo.toml
crates/batcher/source/: Cargo.toml
crates/batcher/source/src/: channel.rs  event.rs  hybrid.rs  polling.rs  subscription.rs
crates/batcher/source/src/test_utils/: mod.rs
crates/builder/core/: Cargo.toml
crates/builder/metering/: Cargo.toml  README.md
crates/builder/publish/: Cargo.toml
crates/builder/publish/src/: broadcast.rs  listener.rs  metrics.rs  publisher.rs
crates/client/bundle/: Cargo.toml
crates/client/cli/: Cargo.toml
crates/client/flashblocks-node/: Cargo.toml
crates/client/metering/: Cargo.toml
crates/client/tx-forwarding/: Cargo.toml
crates/client/txpool-tracing/: Cargo.toml
crates/client/txpool-tracing/src/: metrics.rs  tracker.rs
crates/common/access-lists/: Cargo.toml
crates/common/bundles/: Cargo.toml
crates/common/chains/: Cargo.toml  README.md
crates/common/consensus/: Cargo.toml  README.md
crates/common/evm/: README.md
crates/common/flashblocks/: Cargo.toml  README.md
crates/common/flz/: Cargo.toml  README.md
crates/common/network/: Cargo.toml  README.md
crates/common/provider/: Cargo.toml  README.md
crates/common/rpc-types/: Cargo.toml  README.md
crates/common/rpc-types-engine/: Cargo.toml  README.md
crates/common/rpc-types-engine/src/: attributes.rs  envelope.rs  reth.rs  sidecar.rs
crates/common/rpc-types-engine/src/payload/: error.rs  mod.rs  v3.rs  v4.rs  v5.rs
crates/common/rpc-types/src/: genesis.rs  lib.rs  receipt.rs  reth.rs  transaction.rs
crates/common/rpc-types/src/transaction/: request.rs
crates/common/signer/: Cargo.toml  README.md
crates/consensus/derive/: Cargo.toml
crates/consensus/disc/: Cargo.toml
crates/consensus/engine/: Cargo.toml
crates/consensus/genesis/: Cargo.toml  README.md
crates/consensus/genesis/src/: genesis.rs  lib.rs  params.rs  rollup.rs
crates/consensus/genesis/src/chain/: addresses.rs  hardfork.rs  mod.rs
crates/consensus/genesis/src/system/: config.rs  log.rs  mod.rs  update.rs
crates/consensus/genesis/src/updates/: batcher.rs  da_footprint_gas_scalar.rs  eip1559.rs  gas_config.rs  gas_limit.rs  min_base_fee.rs  mod.rs  operator_fee.rs  signer.rs  validator.rs
crates/consensus/gossip/: Cargo.toml
crates/consensus/peers/: Cargo.toml
crates/consensus/protocol/: Cargo.toml
crates/consensus/providers/: Cargo.toml
crates/consensus/registry/: Cargo.toml  README.md
crates/consensus/registry/src/: lib.rs  registry.rs
crates/consensus/registry/src/ethereum/: holesky.rs  hoodi.rs  mainnet.rs  mod.rs  sepolia.rs
crates/consensus/registry/src/test_utils/: mod.rs
crates/consensus/registry/tests/: hardfork_consistency.rs
crates/consensus/rpc/: Cargo.toml  README.md
crates/consensus/safedb/: Cargo.toml  README.md
crates/consensus/service/: README.md
crates/consensus/sources/: Cargo.toml  README.md
crates/consensus/upgrades/: README.md
crates/execution/chainspec/: README.md
crates/execution/cli/: Cargo.toml  README.md
crates/execution/engine-tree/: CLAUDE.md  Cargo.toml
crates/execution/engine-tree/src/: firehose_extras.rs  lib.rs  validator.rs
crates/execution/evm/: Cargo.toml  README.md
crates/execution/evm/src/: build.rs  config.rs  error.rs  execute.rs  l1.rs  receipts.rs
crates/execution/exex/: Cargo.toml
crates/execution/firehose/: Cargo.toml  README.md
crates/execution/firehose/src/: evm_config.rs  extras.rs  lib.rs
crates/execution/node/: Cargo.toml
crates/execution/payload/: Cargo.toml
crates/execution/rpc/: Cargo.toml
crates/execution/storage/: Cargo.toml
crates/execution/trie/: Cargo.toml
crates/execution/txpool/: Cargo.toml  README.md
crates/execution/upgrades/: Cargo.toml  README.md
crates/execution/upgrades/src/: chain.rs  lib.rs
crates/infra/audit/: Cargo.toml
crates/infra/basectl/: Cargo.toml
crates/infra/ingress-rpc/: Cargo.toml
crates/infra/ingress-rpc/src/: lib.rs  metrics.rs  service.rs  validation.rs
crates/infra/websocket-proxy/: Cargo.toml
crates/infra/websocket-proxy/src/: client.rs  metrics.rs  server.rs  subscriber.rs
crates/proof/tee/nitro-attestation-prover/guest/: .gitignore  Cargo.toml  Justfile  README.md
crates/proof/tee/nitro-attestation-prover/guest/.cargo/: config.toml
crates/succinct/: Justfile
crates/utilities/health/: Cargo.toml
crates/utilities/metrics/: Cargo.toml  README.md
crates/utilities/metrics/src/: lib.rs  noop.rs  registry.rs  timer.rs  timing_macros.rs
crates/utilities/metrics/tests/: registry_init.rs
crates/utilities/test-utils/: Cargo.toml  README.md
crates/utilities/test-utils/src/: accounts.rs
devnet/: Cargo.toml
devnet/src/: rpc.rs
devnet/tests/: bundles.rs  smoke.rs  tx_forwarding.rs
docs/specs/: styles.css  vocs.config.ts
etc/docker/: Justfile  README.md
(+597 files in other folders)
