[package]
name = "base-txpool-tracing"
description = "Transaction tracing extensions for Base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-flashblocks.workspace = true
base-node-runner.workspace = true

# reth
reth-tracing.workspace = true
reth-provider.workspace = true
reth-node-api.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true

# alloy
alloy-primitives.workspace = true

# async
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true

# misc
lru.workspace = true
chrono.workspace = true
base-metrics.workspace = true
metrics = { workspace = true, optional = true }
tracing = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["display"] }

[dev-dependencies]
# workspace
base-test-utils.workspace = true
base-node-runner = { workspace = true, features = ["test-utils"] }
base-flashblocks-node = { workspace = true, features = ["test-utils"] }

# reth
reth-transaction-pool = { workspace = true, features = ["test-utils"] }

# revm
revm-database.workspace = true

# alloy
alloy-eips = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# base-alloy
base-common-consensus = { workspace = true, features = ["reth"] }

# misc
eyre.workspace = true

[features]
default = [ "metrics" ]
metrics = [ "base-metrics/metrics", "dep:metrics" ]
