[package]
name = "base-common-rpc-types-engine"
description = "Base RPC types for the `engine` namespace"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-common-consensus.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# Encoding
snap = { workspace = true, optional = true }
ethereum_ssz = { workspace = true, optional = true }
ethereum_ssz_derive = { workspace = true, optional = true }

# serde
serde = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

# reth
reth-payload-primitives = { workspace = true, optional = true }

# misc
thiserror.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }

# hashing
sha2.workspace = true

[dev-dependencies]
arbtest.workspace = true
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["arbitrary", "getrandom"] }

[features]
default = [ "serde", "std" ]
std = [
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-primitives/std",
	"alloy-rlp/std",
	"alloy-rpc-types-engine/ssz",
	"alloy-rpc-types-engine/std",
	"alloy-serde?/std",
	"base-common-consensus/std",
	"dep:ethereum_ssz",
	"dep:ethereum_ssz_derive",
	"dep:snap",
	"serde?/std",
	"sha2/std",
	"thiserror/std",
]
serde = [
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"alloy-rpc-types-engine/serde",
	"base-common-consensus/serde",
	"dep:alloy-serde",
	"dep:serde",
]
k256 = [ "base-common-consensus/k256" ]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-primitives/rand",
	"alloy-rpc-types-engine/arbitrary",
	"alloy-serde?/arbitrary",
	"base-common-consensus/arbitrary",
	"dep:arbitrary",
	"std",
]
reth = [ "dep:reth-payload-primitives", "serde", "std" ]
