[package]
name = "base-common-rpc-types"
description = "Base RPC types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-common-consensus = { workspace = true, features = ["serde"] }

# Alloy
alloy-serde.workspace = true
alloy-consensus.workspace = true
alloy-network-primitives.workspace = true
alloy-eips = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }

# Serde
serde_json = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive", "alloc"] }

# reth
revm = { workspace = true, optional = true }
alloy-evm = { workspace = true, optional = true }
base-common-evm = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }

# signing
alloy-signer = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }


# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

# misc
derive_more = { workspace = true, features = ["as_ref", "deref_mut", "try_from"] }

[dev-dependencies]
rand.workspace = true
similar-asserts.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-rpc-types-eth = { workspace = true, features = ["arbitrary"] }

[features]
default = [ "std" ]
std = [
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-evm?/std",
	"alloy-network-primitives/std",
	"alloy-primitives/std",
	"alloy-rpc-types-eth/std",
	"alloy-serde/std",
	"base-common-consensus/std",
	"base-common-evm?/std",
	"derive_more/std",
	"revm?/std",
	"serde/std",
	"serde_json/std",
]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-rpc-types-eth/arbitrary",
	"alloy-serde/arbitrary",
	"base-common-consensus/arbitrary",
	"dep:arbitrary",
	"revm?/arbitrary",
	"std",
]
k256 = [ "alloy-rpc-types-eth/k256", "base-common-consensus/k256" ]
serde = [
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-network-primitives/serde",
	"alloy-primitives/serde",
	"alloy-rpc-types-eth/serde",
	"base-common-consensus/serde",
	"base-common-evm?/serde",
	"revm?/serde",
]
reth = [
	"dep:alloy-evm",
	"dep:alloy-network",
	"dep:alloy-signer",
	"dep:base-common-evm",
	"dep:reth-rpc-convert",
	"dep:revm",
	"std",
]
