[package]
name = "base-consensus-registry"
version.workspace = true
description = "A registry of chain configs"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-consensus-genesis = { workspace = true, features = ["serde"] }

# Alloy
alloy-eips.workspace = true
alloy-chains.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
base-common-chains.workspace = true
alloy-primitives = { workspace = true, features = ["map"] }

# misc
spin.workspace = true
derive_more = { workspace = true, features = ["from", "deref"] }

[dev-dependencies]

[[test]]
name = "hardfork_consistency"
required-features = ["test-utils"]

[features]
default = []
std = [
	"alloy-chains/std",
	"alloy-eips/std",
	"alloy-genesis/std",
	"alloy-primitives/std",
	"base-consensus-genesis/std",
	"derive_more/std",
	"spin/std",
]
test-utils = []
