[package]
name = "base-engine-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-evm.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-tasks.workspace = true
reth-errors.workspace = true
reth-provider.workspace = true
reth-node-api.workspace = true
reth-consensus.workspace = true
base-node-core.workspace = true
base-flashblocks.workspace = true
reth-chain-state.workspace = true
reth-node-builder.workspace = true
reth-trie-parallel.workspace = true
base-execution-evm.workspace = true
reth-engine-tree = { workspace = true }
reth-primitives-traits.workspace = true
reth-engine-primitives.workspace = true
reth-payload-primitives.workspace = true
base-execution-chainspec.workspace = true
base-common-consensus = { workspace = true, features = ["reth"] }

revm.workspace = true
revm-primitives.workspace = true

base-common-rpc-types-engine.workspace = true
base-common-evm = { workspace = true, features = ["std"] }

alloy-evm.workspace = true
alloy-eips.workspace = true
alloy-eip7928.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
derive_more.workspace = true
crossbeam-channel.workspace = true
