[package]
name = "base-execution-firehose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-evm.workspace = true
reth-revm.workspace = true
base-revm = { workspace = true, features = ["reth"] }
reth-errors.workspace = true
reth-firehose.workspace = true
firehose-tracer.workspace = true
reth-primitives-traits.workspace = true
base-execution-primitives.workspace = true

# alloy
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
base-alloy-evm = { workspace = true, features = ["std"] }
