[package]
name = "base-execution-upgrades"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base chain upgrades used in base-reth"

[lints]
workspace = true

[dependencies]
# reth
reth-ethereum-forks.workspace = true

base-common-chains.workspace = true

# ethereum
alloy-primitives.workspace = true

# misc
spin.workspace = true

[features]
default = [ "std" ]
std = [ "alloy-primitives/std", "reth-ethereum-forks/std", "spin/std" ]
serde = [
	"alloy-primitives/serde",
	"base-common-chains/serde",
	"reth-ethereum-forks/serde",
]
