[package]
name = "ingress-rpc-lib"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
url.workspace = true
base-common-evm.workspace = true
async-trait.workspace = true
base-bundles.workspace = true
alloy-signer-local.workspace = true
base-execution-evm.workspace = true
base-common-network.workspace = true
audit-archiver-lib.workspace = true
reth-rpc-eth-types.workspace = true
uuid = { workspace = true, features = ["v5"] }
metrics = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }
moka = { workspace = true, features = ["future"] }
serde_json = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
alloy-consensus = { workspace = true, features = ["std"] }
base-metrics = { workspace = true, features = ["metrics"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
backon = { workspace = true, features = ["std", "tokio-sleep"] }
clap = { workspace = true, features = ["std", "derive", "env"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
axum = { workspace = true, features = ["tokio", "http1", "json"] }
alloy-primitives = { workspace = true, features = ["map-foldhash", "serde"] }
base-common-consensus = { workspace = true, features = ["std", "k256", "serde"] }
rdkafka = { workspace = true, features = ["tokio", "libz", "zstd", "ssl-vendored"] }

[dev-dependencies]
wiremock.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
base-bundles = { workspace = true, features = ["test-utils"] }

[features]
default = [ "metrics" ]
metrics = [ "base-metrics/metrics", "dep:metrics" ]
