[package]
name = "websocket-proxy"
description = "WebSocket Proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "websocket_proxy"

[lints]
workspace = true

[dependencies]
http.workspace = true
futures.workspace = true
backoff.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
metrics = { workspace = true, optional = true }
brotli = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
base-metrics = { workspace = true, features = ["metrics"] }
axum = { workspace = true, features = ["ws", "query", "tokio", "http1"] }

[dev-dependencies]
reqwest.workspace = true

[features]
default = [ "metrics" ]
metrics = [ "base-metrics/metrics", "dep:metrics" ]
