[package]
name = "base-health"
description = "Shared health check RPC endpoint for JSON-RPC servers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
http.workspace = true
tower.workspace = true
bytes.workspace = true
futures.workspace = true
http-body.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }

# Optional dependencies for the axum-based health server
eyre = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }
axum = { workspace = true, features = ["http1", "tokio"], optional = true }

[dev-dependencies]
rstest.workspace = true
reqwest.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"] }
alloy-transport-http = { workspace = true, features = ["reqwest"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
axum-server = [
	"dep:axum",
	"dep:eyre",
	"dep:tokio",
	"dep:tokio-util",
	"dep:tracing",
]
