[package]
name = "base-metrics"
version.workspace = true
description = "Utility macros and types for recording metrics in base crates"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ctor = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
metrics = { workspace = true }
ordered-float = { workspace = true }
metrics-util = { workspace = true, features = ["debugging"] }

[features]
std = []
metrics = [ "dep:ctor", "dep:metrics", "std" ]
