[package]
name = "base-test-utils"
description = "Shared test utilities: accounts, genesis config, and contract bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-contract.workspace = true
alloy-signer-local.workspace = true
alloy-genesis = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-sol-types = { workspace = true, features = ["std"] }
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-primitives = { workspace = true, features = ["serde"] }

# base-alloy
base-common-rpc-types.workspace = true

# misc
eyre.workspace = true
serde_json = { workspace = true, features = ["std"] }
