[workspace]
exclude = ["tools/compute-image-id"]

[package]
name = "base-proof-tee-nitro-verifier-guest"
version = "0.0.0"
edition = "2024"

[dependencies]
base-proof-tee-nitro-verifier = { path = "../../nitro-verifier" }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }

[lints.rust]
missing-docs = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
